--- a/web/package.json
+++ b/web/package.json
@@ -39,8 +39,10 @@
     "ie > 8"
   ],
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-runtime": "^6.18.0",
     "lodash": "^4.17.5",
+    "moment": "^2.21.0",
     "node-sass": "^4.7.2",
     "promise-polyfill": "^6.0.2",
     "sass-loader": "^6.0.7",
