--- a/web/webapp-client/package.json
+++ b/web/webapp-client/package.json
@@ -14,6 +14,7 @@
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-router": "^3.0.1",
+    "vue-swipe-tab": "^2.0.2",
     "vue-tabs-component": "^1.4.0",
     "vuex": "^3.0.1"
   },
