--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -26,6 +26,10 @@
 
 
 [[constraint]]
+  name = "github.com/dgrijalva/jwt-go"
+  version = "3.2.0"
+
+[[constraint]]
   name = "github.com/gorilla/mux"
   version = "1.6.1"
 
