--- a/web/webapp-client/package.json
+++ b/web/webapp-client/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.5.16",
     "vue-analytics": "^5.10.5",
     "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.6.2",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -31,5 +32,9 @@
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
