--- a/web/webapp-client/package.json
+++ b/web/webapp-client/package.json
@@ -14,6 +14,7 @@
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.16",
     "vue-analytics": "^5.10.5",
+    "vue-lodash": "^2.0.0",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.6.2",
     "vuex": "^3.0.1"
@@ -32,5 +33,9 @@
     "sass-loader": "^6.0.6",
     "vue-template-compiler": "^2.5.13"
   },
-  "browserslist": ["> 1%", "last 2 versions", "not ie <= 8"]
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
