--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,4 @@
+ENV = "dev"
 BASE_URL = "Base URL of the webservice no trailing slash"
 MEETUP_KEY = "Meetup.com API Key"
 MEETUP_SECRET = "Meetup.com API Secret"
