--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,6 @@
 ENV = "dev"
 BASE_URL = "Base URL of the webservice no trailing slash"
+BOLT_DB_PATH = "Path where boltdb will be stored. Must be writeable. Typically ends with .db"
 MEETUP_KEY = "Meetup.com API Key"
 MEETUP_SECRET = "Meetup.com API Secret"
 JWT_SECRET = "JWT Secret Signing Token"
