--- a/.env.dist
+++ b/.env.dist
@@ -5,3 +5,4 @@ MEETUP_KEY = "Meetup.com API Key"
 MEETUP_SECRET = "Meetup.com API Secret"
 JWT_SECRET = "JWT Secret Signing Token"
 HTTP_PORT = "1337"
+FRONT_URL = "https://conference.mscc.mu" 
